# AM32

./: g431makefile.mk
Inc/: AM32.code-workspace  targets.h
Keil_Projects/: .clangd  Am32G431+G431test.cbuild.yml  Am32G431+PhotonDriveG431.cbuild.yml  Am32G431.cbuild-idx.yml  Am32G431.cbuild-pack.yml  Am32G431.cbuild-set.yml  Am32G431.cproject.yml  Am32G431.csolution.yml  vcpkg-configuration.json
Keil_Projects/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Keil_Projects/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Keil_Projects/tmp/Am32G431+G431test/: CMakeLists.txt  groups.cmake  toolchain.cmake
Keil_Projects/tmp/Am32G431+G431test/src/Am32G431+G431test-stamp/: Am32G431+G431test-configure-.cmake  Am32G431+G431test-configure-Debug.cmake  Am32G431+G431test-source_dirinfo.txt
Keil_Projects/tmp/Am32G431+G431test/tmp/: Am32G431+G431test-cfgcmd.txt  Am32G431+G431test-mkdirs.cmake
Mcu/g431/Src/: peripherals.c
